# intraday_micro_backtest

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
runs/20250814-201640/: metrics.json  params.json
src/: backtest.py
src/intraday_micro_backtest/: __init__.py  backtest.py  cli.py  plotting.py
tests/: test_backtest.py
