[metadata]
name = intraday-micro-backtest
version = 0.1.0
description = Vectorized mean-reversion backtest in NumPy/pandas
license = MIT

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imb = intraday_micro_backtest.cli:main
